src/test/deca/context/invalid/created/Objet/Passe_1/ExtendsItself.deca
// Description:
//    teste la declaration d'une classe en tant qu'extension d'une classe inexistante
// Resultats:
//    Erreur contextuelle
//    Ligne 7 : Error: The parent is not defined

class A extends A {

}

{

}